# syntropy

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  install.sh  pyproject.toml
.github/workflows/: test.yml
docs/: conf.py  syntropy.lattices.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  syntropy.doctree  syntropy.lattices.doctree
docs/_build/doctrees/discrete/: alpha_synergy.doctree  decompositions.doctree  distributions.doctree  multivariate_mi.doctree  optimization.doctree  shannon.doctree  temporal.doctree  utils.doctree
docs/_build/doctrees/gaussian/: decompositions.doctree  multivariate_mi.doctree  optimization.doctree  shannon.doctree  temporal.doctree  utils.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  syntropy.html  syntropy.lattices.html
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt  syntropy.rst.txt
docs/_build/html/discrete/: alpha_synergy.html  decompositions.html  distributions.html  multivariate_mi.html  optimization.html  shannon.html  temporal.html  utils.html
docs/_build/html/examples/: bold.csv  (+1 more)
docs/discrete/: decompositions.rst  multivariate_mi.rst  optimization.rst
docs/gaussian/: decompositions.rst  optimization.rst  shannon.rst  temporal.rst  utils.rst
docs/source/: changelog.rst  conf.py  index.rst  installation.rst  overview.rst  quickstart.rst  statement_of_need.rst  theory.rst
docs/source/api/: modules.rst  syntropy.discrete.rst  syntropy.gaussian.rst  syntropy.knn.rst  syntropy.lattices.rst  syntropy.mixed.rst  syntropy.rst
examples/.ipynb_checkpoints/: example-checkpoint.ipynb  example_discrete-checkpoint.ipynb
joss_paper/: paper.md  references.bib
syntropy/: __init__.py
syntropy/discrete/: __init__.py  alpha_synergy.py  decompositions.py  distributions.py  estimators.py  multivariate_mi.py  optimization.py  shannon.py  temporal.py  utils.py
syntropy/discrete/.claude/: settings.local.json
syntropy/distribution/: distribution.py
syntropy/gaussian/: __init__.py  decompositions.py  multivariate_mi.py  optimization.py  scratch.py  shannon.py  temporal.py  utils.py
syntropy/knn/: __init__.py  multivariate_mi.py  scratch.py  shannon.py  temporal.py  utils.py
syntropy/lattices/: __init__.py  mobius_inversion.py  pi_lattice_2.pickle  pi_lattice_22.pickle  pi_lattice_23.pickle  pi_lattice_24.pickle  pi_lattice_3.pickle  pi_lattice_32.pickle  pi_lattice_33.pickle  pi_lattice_4.pickle  pi_lattice_42.pickle  product_lattice.py  utils.py
syntropy/mixed/: __init__.py  shannon.py
syntropy/neural/: __init__.py  multivariate_mi.py  shannon.py  utils.py
syntropy/nonparametric/: shannon.py
syntropy/utils/: __init__.py  utils.py
tests/: conftest.py  helpers.py  stack.csv  test_discrete.py  test_discrete_decompositions.py  test_discrete_estimators.py  test_discrete_utils.py  test_gaussian.py  test_gaussian_decompositions.py  test_gaussian_optimization.py  test_gaussian_temporal.py  test_gaussian_utils.py  test_imports.py  test_knn.py  test_knn_temporal.py  test_knn_utils.py  test_lattices.py  test_mixed.py  test_neural.py  test_neural_utils.py  test_utils.py
(+25 files in other folders)
